--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,12 @@
 }
 
 .person {
-  border: 0px solid #ddd;
+  border: 3px solid #cccccc;
+  padding: 2rem 1rem;
+}
+
+.person + .person {
+  border-top: 0;
 }
 
 .promoted {
@@ -14,7 +19,6 @@
 body {
     background-image: url("../img/graph.JPG");
     background-color: #dddddd;
-    
 }
 
 .header img {
@@ -23,4 +27,8 @@ body {
 
 li {
   font-weight: bold;
+}
+
+.actions {
+  float: right;
 }
