--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,6 @@
 
 .promoted {
   background-color: #E686E8;
-  border: 3px solid #FF5969;
 }
 
 body {
@@ -31,4 +30,13 @@ li {
 
 .actions {
   float: right;
+}
+
+.person-name {
+  float: left;
+  line-height: 30px;
+  width: calc(100% - 180px);
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
