--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@
 .person {
   border: 3px solid #cccccc;
   padding: 2rem 1rem;
+  transition: 0.5s;
 }
 
 .person + .person {
@@ -35,7 +36,7 @@ li {
 .person-name {
   float: left;
   line-height: 30px;
-  width: calc(100% - 180px);
+  width: calc(100% - 220px);
   white-space: nowrap;
   overflow-x: hidden;
   text-overflow: ellipsis;
